--- a/app/blog/write/writePage.module.css
+++ b/app/blog/write/writePage.module.css
@@ -72,6 +72,7 @@
 
 .thumbnailButton {
   margin: 50px 0;
+  margin-bottom: 0;
   padding: 10px 20px;
   border: 1px solid #1a8917;
   cursor: pointer;
