--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -42,7 +42,7 @@
   
   .contact-icon {
     font-size: 2rem;
-    color: var(--text-color);
+    color: rgba(255, 255, 255, 0.332);
     transition: color 0.3s;
   }
   
